--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,244 @@
-.bg-dark {
-    background-color: #111418 !important;
+
+.div {
+    display: block;
 }
-.p-4 {
-    padding: 1.5rem!important;
+a {
+  text-decoration: none;
 }
-.mb-4 {
-    margin-bottom: 1.5rem!important;
+.a11 {
+    margin-bottom: 20px;
 }
-*, ::after, ::before {
-    box-sizing: border-box;
+.previous {
+    color: rgb(55, 241, 213);
+    margin-top: -230%;
+    margin-left: 40%;
+}
+
+.r1 {
+    max-height: 150px;
+    border-radius: 30px;
+}
+
+.l1 {
+    color: rgb(55, 241, 213);
+    margin-top: 30%;
+
+}
+.l11 {
+    margin-top: 04%;
+}
+.l12 {
+    font-size: medium;
+    margin-top: 08%;
+    font-weight: bold;
+}
+.l13 {
+    margin-top: 07%;
+    font-weight: bold;
+    font-size: larger;
+    float: right;
+
+}
+/* .r1 {
+    align-items: center !important;
+} */
+.rounded {
+    background-color:rgb(220, 230, 230) ;
+    align-items: center !important;
+    width: 90%;
+    margin-left: 15%;
+    border-radius: 30px !important;
+}
+.l2 {
+    margin-top: 02%;
+    margin-left:25%;
+    color: rgb(55, 241, 213);
+    font-family: 'Times New Roman', Times, serif;
+}
+.l3 {
+    font-size: small;
+    align-items: center !important;
+    margin-left: 30%;
+    margin-top: -02%;
+}
+.l31 {
+    color: red;
+}
+.l32 {
+    color: rgb(169, 176, 176);
+}
+.r11 {
+    background-color: #dbdde4;
+    margin-left: 10%;
+    width: 80%;
+}
+.progress-sm {
+    height: 0.5rem !important;
+}
+.progress {
+    --bs-progress-height: 1rem;
+    --bs-progress-font-size: 0.75rem;
+    --bs-progress-bg: #e9ecef;
+    --bs-progress-border-radius: 0.375rem;
+    --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    --bs-progress-bar-color: #fff;
+    --bs-progress-bar-bg: #0d6efd;
+    --bs-progress-bar-transition: width 0.6s ease;
+    display: flex;
+    overflow: hidden;
+    font-size: var(--bs-progress-font-size);
 }
 .div {
     display: block;
 }
-.g-5, .gx-5 {
-    --bs-gutter-x: 3rem;
+.progress-bar{
+    background-color: rgb(55, 241, 213);
+    width: 10%;
+    
 }
-.text-light {
-    color: #dee3e4 !important;
+.progress {
+    background-color: rgb(169, 176, 176);
 }
-.mb-4 {
-    margin-bottom: 1.5rem!important;
+.progress-bar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    color: var(--bs-progress-bar-color);
+    text-align: center;
+    white-space: nowrap;
+    transition: var(--bs-progress-bar-transition);
+}
+.b1 {
+    align-items: center!important;
+}
+.bb1 {
+    color: rgb(55, 241, 213);
+    font-size: medium;
+    margin-top: 10%;
+    margin-left: -12%;
+}
+.bb2 {
+     color: rgb(168, 171, 170);
+     margin-top: -16%;
+     margin-right: -33%;
+     float: right;
+     font-weight: bold;
+}
+.date {
+    color: rgb(169, 176, 176);
+    font-size: small;
+    margin-top: -01%;
+}
+.fe {
+    float: right;
+    font-size:small;
+    color: rgb(55, 241, 213);
+}
+.b2 {
+    margin-top: -05%;
+}
+.target {
+    color: rgb(55, 241, 213);
+    margin-top: 05%;
+    font-size: small;
+}
+.b3 {
+    margin-top: 07%;
+}
+.b31 {
+    color: rgb(55, 241, 213);
+    margin-left: 03%;
+}
+.b32 {
+    background-color: #dbdde4;
+    color: rgb(55, 241, 213);
+    width: 60%;
+    margin-top: -15%;
+    margin-left: 143%;
+}
+.v {
+    font-size: smaller;
+    margin-left: 05%;
+    margin-top: 15%;
+}
+.cal {
+    margin-left: 10%;
+    font-size: small;
+}
+.c1 {
+    background-color: #dbdde4;
+    width: 88%;
+    margin-top: 10%;
+    margin-left: 06%;
+    height: 80px;
+}
+.c11 {
+    height: 50px;
+    width: 30px;
+    margin-left: 05%;
+    margin-top: -01%;
+    background-color: #f3f7f6;
+}
+.image1 {
+    position: relative;
+    top:10px;
+    left:-05px;
+}
+.c12 {
+    position: relative;
+    top: 01px;
+    margin-left: 10px;
+}
+.c121 {
+    font-weight: bold;
+    color: rgb(55, 241, 213);
+    margin-top: -10%;
+}
+.c122 {
+    color: rgb(55, 241, 213);
+    margin-top: -10%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.c13 {
+    top:01px;
+    margin-right: -20px;
+}
+.c131 {
+    font-weight: bold;
+    color: #57b884d5;
+    font-size: larger;
+}
+.c132 {
+    font-weight: bold;
+    color: red;
+    font-size: larger;
+}
+.d1 {
+    background-color: #dbdde4;
+    width: 88%;
+    margin-top: 05%;
+    margin-left: 06%;
+    height: 80px;
+}
+.e1 {
+    background-color: #183e1d;
+    margin-left: 20px;
+    width: 88%;
+    height: 60px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    border-radius: 15px !important;
+}
+.e11 {
+    color: white;
+    font-size: medium;
+    top: 01px;
+    position: relative;
+    margin-left: -10px;
+    font-weight: bold;
+    font-size: large;
+}
+.empty {
+    width: 10px;
 }
