--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,136 @@
-<div class="col-sm-12">
+<div class="col-sm-12 a11">
   <div class="row" style="margin-top: 90px;">
-    <div class="col-md-6" style="width: 50%;">
-      <h1 class="text-6 text-white fw-600 mb-4">
-                    My Education
-      </h1>
-      <div class="bg-dark rounded p-4 mb-4" 
-                        style="font-size: medium;">
-                    <p class="badge bg-danger text-2 fw-400">2010 - 2017</p>
-                    <h3 class="text-5 text-white">GCE Advanced Level</h3>
-                    <p style="color: #20c997;">College P.L. Fleming</p>
-                    <p class="text-white-50 mb-0">
-                        In Cameroon, In the French-speaking system, 
-                        this is called the Baccalaureat series IT (Information Technology).
-                    </p>
-                     <a class="btn btn-outline-success rounded-pill" 
-                    style="border-color: #28a745; align-items: center;
-                  width: 170px; height: 50px;" href="#contact">Hire Me</a>
-                </div>
+    <div class="col-md-4 r1">
+      <div class="rounded">
+        <div class="row l1">
+          <div class="col-md-4 l11">
+            <h1>
+              <a href="#" class="previous">&#8249; </a>
+            </h1>
+          </div>
+          <div class="col-md-4 l12">
+            <p>My Planning</p>
+          </div>
+          <div class="col-md-4 l13">
+            <i class="fa-regular fa-pen-to-square"></i>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="l2">
+              $800 / <b> $5700 </b>
+            </h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5 class="l3">
+              <i class="l31">-10.5%</i> <i class="l32"> than last week </i>
+            </h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="rounded r11">
+            <div class="col-md-12 b1">
+              <div class="col-md-6">
+                <h5 class="bb1">Buy a house </h5>
+              </div>
+              <div class="col-md-6 bb2">
+                <h2>...</h2>
+              </div>
             </div>
+              <div class="col-md-12">
+                <p class="date">10 May 2022</p>
+              </div>
+              <div class="col-md-12 b2">
+                <span class="float-end fe">15%</span>
+                   <div class="progress progress-sm" style="width: 100%;"                                                                                                                                                                                                                                                                                                                                                                                                                                      >
+                      <div class="progress-bar" role="progressbar" 
+                                        style="width: 15%" aria-valuenow="15" 
+                                        aria-valuemin="0" aria-valuemax="100">
+                      </div>
+                    </div>
+              </div>
+              <div class="col-md-12">
+                <p class="target"> 
+                  <i class="fa-solid fa-calendar-days"></i> 
+                  Target for 30 December 2022
+                </p>
+              </div>
+          </div>
+        </div>
+        <div class="row b3">
+          <div class="col-md-6 b31">
+            <b>History</b>
+          </div>
+          <div class="col-md-6">
+            <div class="rounded b32" >
+              <i class="fa-solid fa-calendar-days cal"></i> 
+               Weekly <span class="v"> v</span> 
+            </div>   
+          </div>
+        </div>
+        <div class="row rounded c1">
+          <div class="col-md-2 rounded c11">
+            <img class="image1" style="margin-left: 05%;" src="../assets/Images/1w.png"/>
+          </div>
+          <div class="col-md-6 c12">
+            <span class="c121"> Saving</span> <br/>
+            <span class="c122"> Apr 18, 2022</span>
+          </div>
+          <div class="col-md-3 c13">
+            <span class="c131"> + $12</span>
+          </div>
+        </div>
+        <div class="row rounded d1">
+          <div class="col-md-2 rounded c11">
+            <img class="image1" style="margin-left: 05%;" src="../assets/Images/2w.png"/>
+          </div>
+          <div class="col-md-6 c12">
+            <span class="c121"> Withdrawal</span> <br/>
+            <span class="c122"> Apr 15, 2022</span>
+          </div>
+          <div class="col-md-3 c13">
+            <span class="c132"> + $23</span>
+          </div>
+        </div>
+        <div class="row rounded d1">
+          <div class="col-md-2 rounded c11">
+            <img class="image1" style="margin-left: 05%;" src="../assets/Images/1w.png"/>
+          </div>
+          <div class="col-md-6 c12">
+            <span class="c121"> saving</span> <br/>
+            <span class="c122"> Apr 11, 2022</span>
+          </div>
+          <div class="col-md-3 c13">
+            <span class="c131"> + $42</span>
+          </div>
+        </div>
+        <button class="row rounded e1">
+          <div class="col-md-12">
+            <span class="e11"> + Saving</span>
+          </div>
+        </button>
+        <div class="row">
+          <div class="col-md-12 empty">
+            
+          </div>
+        </div>
+
+        </div>
+      </div>
+
+    <div class="col-md-4" style="width: 50%;">
+      <div class="bg-dark  rounded-pill p-4 mb-4"  style="font-size: medium;">
+      </div>
+    </div>
+
+
+    <div class="col-md-4" style="width: 50%;">
+      <div class="bg-dark  rounded-pill p-4 mb-4"  style="font-size: medium;">
+      </div>
+    </div>
+  </div>
+</div>
 <router-outlet ></router-outlet>
+
