begining of the second div, user information

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,10 +8,19 @@ a {
 .a11 {
     margin-bottom: 20px;
 }
+.rr1 {
+    margin-top: 90px;
+}
 .previous {
-    color: rgb(55, 241, 213);
+    color: #3E5355;
     margin-top: -230%;
     margin-left: 40%;
+}
+.fass {
+     margin-top: 01%;
+     float: right;
+     margin-right: 20px;
+     font-weight: bold;
 }
 
 .r1 {
@@ -20,7 +29,7 @@ a {
 }
 
 .l1 {
-    color: rgb(55, 241, 213);
+    color: #2F5457;
     margin-top: 30%;
 
 }
@@ -36,14 +45,14 @@ a {
     margin-top: 07%;
     font-weight: bold;
     font-size: larger;
-    float: right;
+    margin-left: -01px !important;
 
 }
 /* .r1 {
     align-items: center !important;
 } */
 .rounded {
-    background-color:rgb(220, 230, 230) ;
+    background-color:#FFFFFF ;
     align-items: center !important;
     width: 90%;
     margin-left: 15%;
@@ -52,7 +61,7 @@ a {
 .l2 {
     margin-top: 02%;
     margin-left:25%;
-    color: rgb(55, 241, 213);
+    color: #0D3D40;
     font-family: 'Times New Roman', Times, serif;
 }
 .l3 {
@@ -62,42 +71,33 @@ a {
     margin-top: -02%;
 }
 .l31 {
-    color: red;
+    color: #F25B62;
 }
 .l32 {
-    color: rgb(169, 176, 176);
+    color: #BCC2C5;
 }
 .r11 {
-    background-color: #dbdde4;
+    background-color: #F9F9F9;
     margin-left: 10%;
     width: 80%;
+    border-radius: 10px !important;
+    margin-top: 25px;
 }
 .progress-sm {
-    height: 0.5rem !important;
-}
-.progress {
-    --bs-progress-height: 1rem;
-    --bs-progress-font-size: 0.75rem;
-    --bs-progress-bg: #e9ecef;
-    --bs-progress-border-radius: 0.375rem;
-    --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-    --bs-progress-bar-color: #fff;
-    --bs-progress-bar-bg: #0d6efd;
-    --bs-progress-bar-transition: width 0.6s ease;
-    display: flex;
-    overflow: hidden;
-    font-size: var(--bs-progress-font-size);
+    height: 10px !important;
 }
 .div {
     display: block;
 }
 .progress-bar{
-    background-color: rgb(55, 241, 213);
-    width: 10%;
+    background-color: #0D3D40;
+    width: 20%;
+    max-height: 15px !important;
+    border-radius: 15px;
     
 }
 .progress {
-    background-color: rgb(169, 176, 176);
+    background-color:#BCC2C5;;
 }
 .progress-bar {
     display: flex;
@@ -113,72 +113,84 @@ a {
     align-items: center!important;
 }
 .bb1 {
-    color: rgb(55, 241, 213);
+    color: #335052;
     font-size: medium;
     margin-top: 10%;
     margin-left: -12%;
 }
 .bb2 {
-     color: rgb(168, 171, 170);
+     color: #BCC2C5;
      margin-top: -16%;
      margin-right: -33%;
      float: right;
      font-weight: bold;
 }
 .date {
-    color: rgb(169, 176, 176);
+    color: #BCC2C5;
     font-size: small;
     margin-top: -01%;
 }
 .fe {
     float: right;
     font-size:small;
-    color: rgb(55, 241, 213);
+    color: #0D3D40;
 }
 .b2 {
     margin-top: -05%;
 }
 .target {
-    color: rgb(55, 241, 213);
+    color: #3B7E7B;
     margin-top: 05%;
     font-size: small;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+}
+.sp {
+    margin-left: 10px;
 }
 .b3 {
     margin-top: 07%;
 }
 .b31 {
-    color: rgb(55, 241, 213);
+    color: #0D3D40;
     margin-left: 03%;
 }
 .b32 {
-    background-color: #dbdde4;
-    color: rgb(55, 241, 213);
+    background-color: #F9F9F9;
+    color: #428784;
     width: 60%;
     margin-top: -15%;
     margin-left: 143%;
+    border-radius: 15px !important;
 }
 .v {
     font-size: smaller;
     margin-left: 05%;
-    margin-top: 15%;
+    margin-bottom: 10px;
+}
+.w {
+    margin-left: 10px;
 }
 .cal {
     margin-left: 10%;
     font-size: small;
+    color: #428784;
 }
 .c1 {
-    background-color: #dbdde4;
+    background-color: #F9F9F9;
     width: 88%;
     margin-top: 10%;
     margin-left: 06%;
     height: 80px;
+    border-radius: 10px !important;
 }
 .c11 {
     height: 50px;
     width: 30px;
     margin-left: 05%;
     margin-top: -01%;
-    background-color: #f3f7f6;
+    background-color: #EAEEEF;
+    border-radius: 10px !important;
 }
 .image1 {
     position: relative;
@@ -192,11 +204,11 @@ a {
 }
 .c121 {
     font-weight: bold;
-    color: rgb(55, 241, 213);
+    color: #0D3D40;
     margin-top: -10%;
 }
 .c122 {
-    color: rgb(55, 241, 213);
+    color: #428784;
     margin-top: -10%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -206,23 +218,24 @@ a {
 }
 .c131 {
     font-weight: bold;
-    color: #57b884d5;
+    color: #52B29E;
     font-size: larger;
 }
 .c132 {
     font-weight: bold;
-    color: red;
+    color: #F25B62;
     font-size: larger;
 }
 .d1 {
-    background-color: #dbdde4;
+    background-color: #F9F9F9;
     width: 88%;
     margin-top: 05%;
     margin-left: 06%;
     height: 80px;
+    border-radius: 10px !important;
 }
 .e1 {
-    background-color: #183e1d;
+    background-color: #155E5E;
     margin-left: 20px;
     width: 88%;
     height: 60px;
