--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-12 a11">
-  <div class="row" style="margin-top: 90px;">
+  <div class="row rr1">
     <div class="col-md-4 r1">
       <div class="rounded">
         <div class="row l1">
@@ -12,7 +12,7 @@
             <p>My Planning</p>
           </div>
           <div class="col-md-4 l13">
-            <i class="fa-regular fa-pen-to-square"></i>
+            <span class="fass"><i class="fa-regular fa-pen-to-square"></i></span>
           </div>
         </div>
         <div class="row">
@@ -54,7 +54,7 @@
               <div class="col-md-12">
                 <p class="target"> 
                   <i class="fa-solid fa-calendar-days"></i> 
-                  Target for 30 December 2022
+                     <span class="sp">Target for 30 December 2022 </span>
                 </p>
               </div>
           </div>
@@ -66,7 +66,7 @@
           <div class="col-md-6">
             <div class="rounded b32" >
               <i class="fa-solid fa-calendar-days cal"></i> 
-               Weekly <span class="v"> v</span> 
+               <span class="w">Weekly </span><span class="v"> v</span> 
             </div>   
           </div>
         </div>
