--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,5 @@
 @import "~font-awesome/css/font-awesome.css";
 
 body {
-    background-color: rgb(207, 203, 203);
+    background-color: #F5F5F5;
 }
