--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,14 +120,96 @@
         </div>
       </div>
 
-    <div class="col-md-4" style="width: 50%;">
-      <div class="bg-dark  rounded-pill p-4 mb-4"  style="font-size: medium;">
+
+
+      <!-----------------------------------------  Second div ------------------------->
+      <!-----------------------------------------  Second div ------------------------->
+      <!-----------------------------------------  Second div ------------------------->
+      <!-----------------------------------------  Second div ------------------------->
+
+
+    <div class="col-md-4 r1">
+      <div class="rounded">
+        <div class="row e2">
+          <div class="col-md-12">
+            <div class="col-md-3">
+              <img class="img-fluid rounded-circle" src="../assets/Images/profile1.jpg" alt="">
+            </div>
+            <div class="col-md-6 r12">
+              <p class="name">Hallo, Azhar !</p>
+              <p class="welcome">Welcome back</p>
+            </div>
+            <div class="col-md-3">
+              <div class="rounded-circle circle">
+                  <i class="fa-solid fa-bell"></i>
+                  <span class="badge">.</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+              <img class="tof" src="../assets/Images/images.png">
+          </div>
+          <div class="col-md-12 r122">
+            <div class="col-md-6">
+              <p class="r123">Your Balance </p> <br>
+              <p class="r124"> $592.323</p>
+            </div>
+            <div class="col-md-6 r121">
+              <p class="r125">Traffic / Week </p> <br>
+              <p class="r126"> 
+                <i class="fa fa-arrow-down"></i>
+                -0.89%
+              </p>
+            </div>
+          </div>
+          <div class="col-md-12 r21">
+            <p class="transaction">Transaction</p>
+            <p class="all">See All</p>
+          </div>
+          <div class="row rounded d8">
+            <div class="col-md-2 rounded d11">
+              <img class="image2" src="../assets/Images/images1.png"/>
+            </div>
+            <div class="col-md-6 c12">
+              <span class="c121"> Adobe Photoshop</span> <br/>
+              <span class="d122"> May 10, 2022 at 08.45</span>
+            </div>
+            <div class="col-md-3 c13">
+              <span class="d131"> + $52</span>
+            </div>
+        </div>
+        <div class="row rounded d2">
+          <div class="col-md-2 rounded d11">
+            <img class="image2" src="../assets/Images/images2.png"/>
+          </div>
+          <div class="col-md-6 c12">
+            <span class="c121"> Antonsen</span> <br/>
+            <span class="d122"> May 07, 2022 at 10.50</span>
+          </div>
+          <div class="col-md-3 c13">
+            <span class="d132"> + $11.5</span>
+          </div>
+        </div>
+        <div class="row rounded d3">
+          <div class="col-md-2 rounded d11">
+            <img class="image2" src="../assets/Images/images3.png"/>
+          </div>
+          <div class="col-md-6 c12">
+            <span class="c121"> Sketch</span> <br/>
+            <span class="d122"> May 01, 2022 at 09.15</span>
+          </div>
+          <div class="col-md-3 c13">
+            <span class="c132"> - $15</span>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
 
 
-    <div class="col-md-4" style="width: 50%;">
-      <div class="bg-dark  rounded-pill p-4 mb-4"  style="font-size: medium;">
+    <div class="col-md-4">
+      <div class=" rounded">
+        55555
       </div>
     </div>
   </div>
