--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -207,9 +207,100 @@
     </div>
 
 
-    <div class="col-md-4">
+
+
+      <!-----------------------------------------  Third div ------------------------->
+      <!-----------------------------------------  Third div ------------------------->
+      <!-----------------------------------------  Third div ------------------------->
+      <!-----------------------------------------  Third div ------------------------->
+
+
+
+    <div class="col-md-4 t1">
       <div class=" rounded">
-        55555
+        <div class="row l1">
+          <div class="col-md-4 l11">
+            <h1>
+              <a href="#" class="previous">&#8249; </a>
+            </h1>
+          </div>
+          <div class="col-md-4 l12">
+            <p>Transaction</p>
+          </div>
+          <div class="col-md-4 t13">
+            <span class="fass">...</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 t2">
+            <div class="col-md-7 t21">
+              <h2 class="t22"> $271.560 <br></h2>
+              <p class="t23"> +25.15% <span class="t24">than last month</span></p>
+            </div>
+            <div class="col-md-5 t3">
+              <div class="rounded t32" >
+              <i class="fa-solid fa-calendar-days cal"></i> 
+               <span class="g">Monthly </span><span class="x"> v</span> 
+            </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+             <div class="card-body">
+                <canvas id="speedChart" width="400" height="100"></canvas>
+                <img class="img2" src="../assets/Images/chart.png">
+             </div>
+          </div>
+          <div class="col-md-12 t3">
+            <p class="expenses">Expenses</p> <span class="v1">v</span>
+          </div>
+          <div class="row rounded d8">
+            <div class="col-md-2 rounded R11">
+              <img class="image3" src="../assets/Images/img1.png"/>
+            </div>
+            <div class="col-md-6 c12">
+              <span class="c121"> Paypal</span> <br/>
+              <span class="d122"> May 08, 2022 at 12.45</span>
+            </div>
+            <div class="col-md-3 c13">
+              <span class="t131"> + $20.1</span>
+            </div>
+          </div>
+          <div class="row rounded d2">
+            <div class="col-md-2 rounded d11">
+              <img class="image2" src="../assets/Images/img2.png"/>
+            </div>
+            <div class="col-md-6 c12">
+              <span class="c121"> Qiwi</span> <br/>
+              <span class="d122"> May 07, 2022 at 11.00</span>
+            </div>
+            <div class="col-md-3 c13">
+              <span class="t132"> + $15.5</span>
+            </div>
+        </div>
+        <div class="row rounded d3">
+          <div class="col-md-2 rounded d11">
+            <img class="image2" src="../assets/Images/images2.png"/>
+          </div>
+          <div class="col-md-6 c12">
+            <span class="c121"> Antonsen</span> <br/>
+            <span class="d122"> May 07, 2022 at 10.50</span>
+          </div>
+          <div class="col-md-3 c13">
+              <span class="t132"> + $11.5</span>
+          </div>
+        </div>
+        <div class="row rounded d3">
+          <div class="col-md-2 rounded d11">
+            <img class="image4" src="../assets/Images/img1.png"/>
+          </div>
+          <div class="col-md-6 c12">
+            <span class="c121"> Paypal</span> <br/>
+            <span class="d122"> May 01, 2022 at 08.32</span>
+          </div>
+          <div class="col-md-3 c13">
+              <span class="t134"> + $47.32</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
