--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<!----------------------------------------Starting of the woork-------------------------->
+<!----------------------------------------Starting of the woork-------------------------->
+<!----------------------------------------Starting of the woork-------------------------->
+<!----------------------------------------Starting of the woork-------------------------->
+
+
 <div class="col-sm-12 a11">
   <div class="row rr1">
     <div class="col-md-4 r1">
@@ -303,6 +309,7 @@
         </div>
       </div>
     </div>
+   </div>
   </div>
 </div>
 <router-outlet ></router-outlet>
