--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -134,10 +134,10 @@
       <!-----------------------------------------  Second div ------------------------->
 
 
-    <div class="col-md-4 r1">
-      <div class="rounded">
-        <div class="row e2">
-          <div class="col-md-12">
+    <div class="col-md-4">
+      <div class="rounded g1">
+        <div class="row">
+          <div class="col-md-12 p1">
             <div class="col-md-3">
               <img class="img-fluid rounded-circle" src="../assets/Images/profile1.jpg" alt="">
             </div>
@@ -148,7 +148,7 @@
             <div class="col-md-3">
               <div class="rounded-circle circle">
                   <i class="fa-solid fa-bell"></i>
-                  <span class="badge">.</span>
+                  <span class="badge">,</span>
               </div>
             </div>
           </div>
@@ -172,42 +172,42 @@
             <p class="transaction">Transaction</p>
             <p class="all">See All</p>
           </div>
-          <div class="row rounded d8">
+          <div class="col-md-12 u81">
             <div class="col-md-2 rounded d11">
               <img class="image2" src="../assets/Images/images1.png"/>
             </div>
-            <div class="col-md-6 c12">
+            <div class="col-md-6 u12">
               <span class="c121"> Adobe Photoshop</span> <br/>
               <span class="d122"> May 10, 2022 at 08.45</span>
             </div>
-            <div class="col-md-3 c13">
-              <span class="d131"> + $52</span>
+            <div class="col-md-3 u13">
+              <span> + $52</span>
             </div>
-        </div>
-        <div class="row rounded d2">
-          <div class="col-md-2 rounded d11">
-            <img class="image2" src="../assets/Images/images2.png"/>
           </div>
-          <div class="col-md-6 c12">
-            <span class="c121"> Antonsen</span> <br/>
-            <span class="d122"> May 07, 2022 at 10.50</span>
+          <div class="col-md-12 u8">
+            <div class="col-md-2 rounded d11">
+              <img class="image2" src="../assets/Images/images2.png"/>
+            </div>
+            <div class="col-md-6 u12">
+              <span class="c121"> Antonsen</span> <br/>
+              <span class="d122"> May 07, 2022 at 10.50</span>
+            </div>
+            <div class="col-md-3 u13">
+              <span class="u131"> + $11.5</span>
+            </div>
           </div>
-          <div class="col-md-3 c13">
-            <span class="d132"> + $11.5</span>
+          <div class="col-md-12 u8">
+            <div class="col-md-2 rounded d11">
+              <img class="image2" src="../assets/Images/images3.png"/>
+            </div>
+            <div class="col-md-6 u12">
+              <span class="c121"> Sketch </span> <br/>
+              <span class="d122"> May 01, 2022 at 09.15</span>
+            </div>
+            <div class="col-md-3 u13">
+              <span> + $15</span>
+            </div>
           </div>
-        </div>
-        <div class="row rounded d3">
-          <div class="col-md-2 rounded d11">
-            <img class="image2" src="../assets/Images/images3.png"/>
-          </div>
-          <div class="col-md-6 c12">
-            <span class="c121"> Sketch</span> <br/>
-            <span class="d122"> May 01, 2022 at 09.15</span>
-          </div>
-          <div class="col-md-3 c13">
-            <span class="c132"> - $15</span>
-          </div>
-        </div>
       </div>
       </div>
     </div>
@@ -234,7 +234,7 @@
             <p>Transaction</p>
           </div>
           <div class="col-md-4 t13">
-            <span class="fass">...</span>
+            <span class="fasse">...</span>
           </div>
         </div>
         <div class="row">
@@ -245,9 +245,9 @@
             </div>
             <div class="col-md-5 t3">
               <div class="rounded t32" >
-              <i class="fa-solid fa-calendar-days cal"></i> 
+                <i class="fa-solid fa-calendar-days cal"></i> 
                <span class="g">Monthly </span><span class="x"> v</span> 
-            </div>
+              </div>
             </div>
           </div>
           <div class="col-md-12">
@@ -259,54 +259,54 @@
           <div class="col-md-12 t3">
             <p class="expenses">Expenses</p> <span class="v1">v</span>
           </div>
-          <div class="row rounded d8">
-            <div class="col-md-2 rounded R11">
-              <img class="image3" src="../assets/Images/img1.png"/>
+          <div class="col-md-12 u81">
+            <div class="col-md-2 rounded d11">
+              <img class="image2" src="../assets/Images/img1.png"/>
             </div>
-            <div class="col-md-6 c12">
+            <div class="col-md-6 u12">
               <span class="c121"> Paypal</span> <br/>
-              <span class="d122"> May 08, 2022 at 12.45</span>
+              <span class="d122"> May 08, 2022 at 12.50</span>
             </div>
-            <div class="col-md-3 c13">
-              <span class="t131"> + $20.1</span>
+            <div class="col-md-3 u13">
+              <span class="u131"> + $20.1</span>
             </div>
           </div>
-          <div class="row rounded d2">
+          <div class="col-md-12 u8">
             <div class="col-md-2 rounded d11">
               <img class="image2" src="../assets/Images/img2.png"/>
             </div>
-            <div class="col-md-6 c12">
+            <div class="col-md-6 u12">
               <span class="c121"> Qiwi</span> <br/>
               <span class="d122"> May 07, 2022 at 11.00</span>
             </div>
-            <div class="col-md-3 c13">
-              <span class="t132"> + $15.5</span>
+            <div class="col-md-3 u13">
+              <span class="u131"> + $15.5</span>
             </div>
-        </div>
-        <div class="row rounded d3">
-          <div class="col-md-2 rounded d11">
-            <img class="image2" src="../assets/Images/images2.png"/>
           </div>
-          <div class="col-md-6 c12">
-            <span class="c121"> Antonsen</span> <br/>
-            <span class="d122"> May 07, 2022 at 10.50</span>
+          <div class="col-md-12 u8">
+            <div class="col-md-2 rounded d11">
+              <img class="image2" src="../assets/Images/images2.png"/>
+            </div>
+            <div class="col-md-6 u12">
+              <span class="c121"> Antonsen</span> <br/>
+              <span class="d122"> May 07, 2022 at 10.50</span>
+            </div>
+            <div class="col-md-3 u13">
+              <span class="u131"> + $11.5</span>
+            </div>
           </div>
-          <div class="col-md-3 c13">
-              <span class="t132"> + $11.5</span>
+          <div class="col-md-12 u8">
+            <div class="col-md-2 rounded d11">
+              <img class="image2" src="../assets/Images/img1.png"/>
+            </div>
+            <div class="col-md-6 u12">
+              <span class="c121"> Paypal</span> <br/>
+              <span class="d122"> May 01, 2022 at 08.32</span>
+            </div>
+            <div class="col-md-3 u13">
+              <span class="u131"> + $41.7</span>
+            </div>
           </div>
-        </div>
-        <div class="row rounded d3">
-          <div class="col-md-2 rounded d11">
-            <img class="image4" src="../assets/Images/img1.png"/>
-          </div>
-          <div class="col-md-6 c12">
-            <span class="c121"> Paypal</span> <br/>
-            <span class="d122"> May 01, 2022 at 08.32</span>
-          </div>
-          <div class="col-md-3 c13">
-              <span class="t134"> + $47.32</span>
-          </div>
-        </div>
       </div>
     </div>
    </div>
